--- a/CFP.App/Formularios/Financeiros/UserControlContas.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlContas.xaml
@@ -169,7 +169,7 @@
                                      FontSize="18"
                                      Foreground="#FF1F3D68"
                                      VerticalAlignment="Stretch" 
-                                     Margin="480 0 0 0 " TabIndex="6"/>
+                                     Margin="480 0 0 0 " TabIndex="6" LostFocus="txtVencimento_LostFocus"/>
                             <Grid x:Name="GridRow4" Grid.Row="4" >
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
@@ -186,13 +186,13 @@
                                     FontSize="18"
                                     Foreground="#FF1F3D68"
                                     VerticalAlignment="Stretch" 
-                                    Margin="0 0 45 0" TabIndex="7" 
+                                    TabIndex="7" 
                                     PreviewTextInput="txtValorTotal_PreviewTextInput" PreviewKeyDown="txtValorTotal_PreviewKeyDown" 
                                     />
 
                                 <Button x:Name="btParcelas" 
                                     Grid.Row="4"
-                                        Grid.Column="0"
+                                        Grid.Column="1"
                                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}"
                                     Height="40" Width="40" 
                                     Background="#FF1F3D68"
@@ -214,7 +214,7 @@
                                     FontSize="18"
                                     Foreground="#FF1F3D68"
                                     VerticalAlignment="Stretch" 
-                                    Margin="10 0 10 0" IsEnabled="False" 
+                                    Margin="10 0 45 0" IsEnabled="False" 
                                     MaxLength="3" TabIndex="9" PreviewTextInput="txtQtdParcelas_PreviewTextInput" PreviewKeyDown="txtQtdParcelas_PreviewKeyDown"/>
 
                                 <TextBox
